# COSC350_WebStreaming

./: README.md  pyproject.toml  webstreaming.py
templates/: index.html
